# allmond

./: .gitignore  README.md  eval_phi3.py  expts.ipynb  hf_train.py  nohup.out  requirements.txt  setup.sh  train.ipynb  train.py  train_phi3.py  train_using_Karpathys_shitty_code.ipynb
.docs/: TODO.md  accelerate.md  wandb.md  whatMakesThisRepoUnique.md
.eval_results/: Phi-3-mini-3.8B_eval.json  phi3_mmlu_results.json
arch_exps/tiny-baseline/: requirements.txt  train.py
configs/: singlemachine_FSDP.yml
data/: README.md  config.py  download_openwebtext.py  download_wikisimple.py  loader.py  unlabeled.py
docs/: TODO.md  finetuning_expt.md  knownIssues.md  whatMakesThisRepoUnique.md
evals/: README.md  arc.py  benchmark.py  hellaswag.py  mmlu.py  mteb_benchmark.py  nonsense.py  pyproject.toml  vitaminc.py  winograd.py
evals/evals/: mteb_benchmark.py
fastgpt/: train.ipynb  train.py
fastgpt/data/: experiments.ipynb  test_unlabeled.py  unlabeled.py
fastgpt/model/: callbacks.py  gpt2.py
learner/: LLMLearner.py  README.md  accelerate_config_example.yml  callbacks.py  fastai_learner_mod.py  learner.py
model/: README.md  callbacks.py  customLearner.py  eval.ipynb  gpt.py  gpt2.py  huggingface_wrappers.py  tokenizer.py  transformer_components.py
model/eval/: eval.py
model/utils/: all.py  generation.py  huggingface_wrappers.py  transformer_components.py
results/result/: SummEval.json  (+2 more)
scripts/: README.md  eval_phi3.py  finetune_phi3_math.py  train.py  train_llama3.py  train_phi3.py
tmp/: distributed_fastai.py  example_distrib.py
wandb/: settings
(+16 files in other folders)
